//
// Protocol buffers definition for Contact Tracing server
//

syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.contact";
option java_outer_classname = "ContactProto";

package contact;

import "google/protobuf/timestamp.proto";


/* ------- Register new infected ------- */
message InfectedRequest {
  int32 number = 1;
  int32 key = 2;
}

message InfectedResponse {
  // Empty response
}

/* -------- Get recent infected -------- */
message InfectedInfo {
  int32 number = 1;
  int32 key = 2;
}

message GetInfectedRequest {
  google.protobuf.Timestamp lastUpdate = 1;
}

message GetInfectedResponse {
  repeated InfectedInfo infectedInfos = 1;
}


/* ---------- Tracing service ---------- */
service ContactTracing {
  // Register new infected
  rpc infected(InfectedRequest) returns (InfectedResponse);
  // Get recent infected
  rpc getInfected(GetInfectedRequest) returns (GetInfectedResponse);
}